# clarity-wasm

./: .commitlintrc.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  appdb.sqlite  build.rs  init.el  readme.html
.cargo/: config  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
ab-tester/: .env  .gitignore  Cargo.toml  README.md  appdb.sqlite  config.toml  justfile
ab-tester/migrations/2023-10-11-121426_initial_db/: down.sql  up.sql
ab-tester/src/: appdb.rs  clarity.rs  cli.rs  config.rs  context.rs  datastore.rs  db.rs  environments.rs  errors.rs  macros.rs  main.rs  model.rs  runtime.rs  schema.rs  stacks.rs  telemetry.rs  types.rs  utils.rs
ab-tester/src/cli/: commands.rs  console.rs
ab-tester/src/cli/commands/: console.rs  data.rs  env.rs  tui.rs
ab-tester/src/cli/console/: action.rs  app.rs  components.rs  data.rs  event.rs  handler.rs  screens.rs  theme.rs  tui.rs  ui.rs
ab-tester/src/cli/console/components/: area_warning.rs  empty.rs  header.rs  menu.rs  popup.rs  status_bar.rs
ab-tester/src/cli/console/screens/: blocks.rs  main.rs  mod.rs  start.rs
ab-tester/src/cli/console/theme/: default.rs
ab-tester/src/cli/console/widgets/: area_warning.rs  header.rs  menu.rs  mod.rs  popup.rs  status_bar.rs  title_span.rs
ab-tester/src/context/: blocks.rs  boot_data.rs  callbacks.rs  environments.rs  marf.rs  replay.rs
ab-tester/src/context/environments/: instrumented.rs  network.rs  stacks_node.rs
ab-tester/src/db/: appdb.rs  datastore.rs  dbcursor.rs  model.rs  schema.rs  stacks_burnstate_db.rs  stacks_headers_db.rs  stacks_instrumentation.rs  stacks_node.rs
ab-tester/src/db/appdb/: burnstate_db.rs  clarity_store.rs  headers_db.rs  mod.rs
ab-tester/src/db/model/: app_db.rs  chainstate_db.rs  clarity_db.rs  sortition.rs  sortition_db.rs
ab-tester/src/db/schema/: appdb.rs  sortition.rs
ab-tester/src/environments/: instrumented.rs  stacks_node.rs
ab-tester/src/environments/instrumented/: mod.rs  readable_env.rs  writeable_env.rs
ab-tester/src/environments/network/: mod.rs
ab-tester/src/environments/stacks_node/: db.rs  mod.rs
ab-tester/src/environments/stacks_node/db/: marf.rs  model.rs  schema.rs  stacks_burnstate_db.rs  stacks_headers_db.rs
ab-tester/src/environments/stacks_node/db/model/: chainstate.rs  clarity.rs  sortition.rs
ab-tester/src/environments/stacks_node/db/schema/: chainstate.rs  clarity.rs  sortition.rs
benches/: benchmark.rs
clar2wasm/: Cargo.toml  Makefile.toml  build.rs
clar2wasm/benches/: benchmark.rs  benchmark2.rs  comparison.rs
clar2wasm/scripts/: boot-contracts-compile.sh
clar2wasm/src/: ast_visitor.rs  cost.rs  cost.rs~  costs.rs  datastore.rs  debug_msg.rs  deserialize.rs  duck_type.rs  error_mapping.rs  initialize.rs  lib.rs  linker.rs  serialize.rs  test_utils.rs  tools.rs  wasm_cost.rs  wasm_generator.rs  wasm_utils.rs
clar2wasm/src/cost/: clar1.rs  clar2.rs  clar3.rs
clar2wasm/src/standard/: standard.wasm  standard.wat  tests.rs
clar2wasm/src/words/: arithmetic.rs  bindings.rs  bitwise.rs  blockinfo.rs  buff_to_integer.rs  comparison.rs  conditionals.rs  consensus_buff.rs  constants.rs  contract.rs  control_flow.rs  conversion.rs  data_vars.rs  default_to.rs  definitions.rs  enums.rs  equal.rs  functions.rs  hashing.rs  list_manipulation.rs  logical.rs  maps.rs  mod.rs  noop.rs  options.rs  principal.rs  print.rs  responses.rs  secp256k1.rs  sequences.rs  stx.rs  tokens.rs  traits.rs  tuples.rs
clar2wasm/tests/: bin_tests.rs  boot_contracts_tests.rs  lib.rs  lib_tests.rs
clar2wasm/tests/contracts/: README.md  as-contract.clar  begin.clar  bit-and.clar  bit-not.clar  bit-or.clar  bit-shift-left.clar  bit-shift-right.clar  block-heights.clar  bool.clar  buffer-to-integer.clar  builtins-principals.clar  cmp-arith.clar  constant-expr.clar  constant-literal.clar  define-private-0.clar  define-public-ok.clar  define-tokens.clar  div.clar  get-block-info.clar  hashes.clar  let.clar  let.clar.failing  mul.clar  network.clar  none.clar  ok.clar  options.clar  print.clar  private-call.clar  root-cause-error-case.clar  runtime-errors.clar  sequences.clar  tuple.clar  var-get.clar  xor.clar
clar2wasm/tests/contracts/boot-contracts/: bns.clar  pox-2.clar  pox-4.clar  signers-caller.clar
clar2wasm/tests/contracts/multi-contract/: README.md
clar2wasm/tests/fixtures/clarity-files/: memory-oob.clar
clar2wasm/tests/oom-checker/: main.rs  unit_tests.rs
clar2wasm/tests/standard/: crosscheck_misc.rs  main.rs  property_tests.rs  reference.rs  unit_tests.rs  utils.rs
clar2wasm/tests/wasm-generation/: arithmetic.rs  bindings.rs  bitwise.rs  blockinfo.rs  comparison.rs  conditionals.rs  consensus_buff.rs  constants.rs  contracts.rs  control_flow.rs  data_vars.rs  default_to.rs  equal.rs  function_calls.rs  functions.rs  hashing.rs  is_eq.rs  main.rs  maps.rs  noop.rs  optional.rs  principal.rs  print.rs  property_value.rs  regression.rs  response.rs  secp256k1.rs  sequences.rs  serialization_size.rs  stx.rs  tokens.rs  traits.rs  tuple.rs  values.rs
clarity-ab-tester/: Cargo.toml
examples/: call-private-with-args.clar  call-read-only.clar  concat.clar  def-priv.clar  (+3 more)
tests/: Cargo.toml  Makefile.toml
tests/benches/: benchmark.rs
tests/contracts/: add-3.clar  add.clar  analysis-error.clar.obsolete  as-contract.clar  bit-xor.clar  buff-to-int-be.clar  buff-to-int-le.clar  buff-to-uint-be.clar  buff-to-uint-le.clar  call-private.clar  call-public-with-args.clar  call-public.clar  call-read-only-with-args.clar  chain-id.clar  cmp-buffer.clar  constant.clar  contract-callee.clar  contract-caller.clar  default-to.clar  define-map.clar  define-public-err.clar  define-public-ok.clar  define-read-only-1.clar  equal.clar  err.clar  fold-bench.clar  fold.clar  lt.clar  maps.clar  memory-oob-runtime.clar  memory-oob.clar  multi-statement.clar  noop.clar  not.clar  options.clar  parse-error.clar.obsolete  power.clar  print.clar  responses.clar  sequences.clar  (+8 more)
tests/src/: datastore.rs  lib.rs  lib_tests.rs  util.rs
tests/tests/: bin_tests.rs  lib_tests.rs
(+13 files in other folders)
