[package]
name = "clarity-ab-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clarity = { path = "../stacks-blockchain/clarity" }
stacks-common = { path = "../stacks-blockchain/stacks-common" }
blockstack-core = { path = "../stacks-blockchain" }
diesel = { version = "2.1.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
env_logger = "0.10.0"
log = "0.4.20"
toml = "0.8.2"
serde = "1.0.188"
serde_derive = "1.0.188"
thiserror = "1.0.49"
rand = "0.8.5"
clap = { version = "4.4.6", features = ["default", "derive"] }
hex = "0.4.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.24.0", features = ["macros"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
color-eyre = "0.6.2"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
tokio-util = "0.7.9"
signal-hook = "0.3.17"
rusqlite = { version = "=0.27.0", features = ["bundled"] }
sha2 = "0.10.8"
lz4_flex = { version = "0.11.1", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3
