[package]
name = "clar2wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch = "feat/clarity-wasm-next" }
clap = { version = "4.3.17", features = ["derive"] }
regex = "1.9.1"
walrus = "0.20.1"
lazy_static = "1.4.0"

# For developer mode
sha2 = { version = "0.10.7", optional = true }
chrono = { version = "0.4.20", optional = true }
rusqlite = { version = "0.28.0", optional = true }

[build-dependencies]
wat = "1.0.74"

[features]
developer-mode = ["sha2", "chrono", "rusqlite", "clarity/testing"]
flamegraph = []
pb = []

[dev-dependencies]
wasmtime = "15.0.0"
criterion = "0.5.1"
proptest = "1.2.0"
num-integer = { version = "0.1.45", default-features = false }
clar2wasm-tests = { path = "../tests" }
hex = "0.4.3"
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec", "criterion", "frame-pointer"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "clar2wasm"
path = "src/bin/main.rs"

[[bench]]
name = "benchmark"
harness = false
