[package]
name = "clar2wasm-tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[dependencies]
clarity = { git = "https://github.com/stacks-network/stacks-core.git", rev = "75ee7718db5b251adf7bc3fcd769b78859310d54" }
clar2wasm = { path = "../clar2wasm", features = ["developer-mode"] }
wasmtime = "15.0.0"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"
wasmparser = "0.110.0"
criterion = "0.5.1"
hex = "0.4.3"
